Bug 61754 - Number range name doesn't work with Catalan UI
Summary: Number range name doesn't work with Catalan UI
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Localization (show other bugs)
Version:
(earliest affected)
3.6.5.2 release
Hardware: All All
: high normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:4.2.0
Keywords:
: 69172 (view as bug list)
Depends on:
Blocks:
 
Reported: 2013-03-03 20:45 UTC by jmontane
Modified: 2013-09-12 13:40 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments
ODT file showing the bug (240.62 KB, application/vnd.oasis.opendocument.text)
2013-03-03 20:45 UTC, jmontane
Details

Note You need to log in before you can comment on or make changes to this bug.
Description jmontane 2013-03-03 20:45:00 UTC
Created attachment 75857 [details]
ODT file showing the bug

When you try to numerate the Images inserted on a document, it assigns to it the
variable name "Il·lustracio" (logic, because this is the Catalan translation of
image) but then the number doesn't work properly.

The 'problem' is related with interpunct "·" char, U+00B7.

Related OOo bug:
https://issues.apache.org/ooo/show_bug.cgi?id=114050

As a workarround, I replaced Il·lustració by Iŀlustració in Pootle, but it's not an acceptable solution. The use of "ŀ" char (U+0140) is discouraged by Unicode. The preferred input form is, by far, "Il·lustració", using "·" char, U+00B7.
Comment 1 Joel Madero 2013-04-16 19:54:16 UTC
Thank you for reporting this issue! I have been able to confirm the issue on:
Version 3.6.5.2 
Platform: Bodhi Linux 2.2 x64
+ + + + + + + + + + + + + + + + + + + + + + + + + + + + + + + + + + + + + + + 
As I've been able to confirm this problem on an earlier release I am changing the version number as version is the earliest version that we can confirm the bug, we use comments to say that the bug exists in newer versions as well.

Marking as:

New (confirmed)
Normal - prevents professional quality work
High - only impacts a single language but quite serious for any power users including professional and academic users to be able to numerate their images correctly. Workaround is less than ideal


+ + + + + + + + + + + + + + + + + + + + + + + + + + + + + + + + + + + + + + + 
LibreOffice is powered by a team of volunteers, every bug is confirmed (triaged) by human beings who mostly give their time for free. We invite you to join our triaging by checking out this link:
https://wiki.documentfoundation.org/QA/BugTriage

There are also other ways to get involved including with marketing, UX, documentation, and of course developing -  http://www.libreoffice.org/get-help/mailing-lists/. 

Lastly, good bug reports help tremendously in making the process go smoother, please always provide reproducible steps (even if it seems easy) and attach any and all relevant material
Comment 2 Andras Timar 2013-09-12 07:30:55 UTC
*** Bug 69172 has been marked as a duplicate of this bug. ***
Comment 3 Urmas 2013-09-12 09:59:27 UTC
The character U+00B7 cannot be used in identifiers. That is the present design and if you want it changed, open a separate enhancement bug.

If the Catalan language is not compatible with computers, that isn't computers' problem.
Comment 4 Jesus Corrius 2013-09-12 10:26:09 UTC
(In reply to comment #3)
> The character U+00B7 cannot be used in identifiers. That is the present
> design and if you want it changed, open a separate enhancement bug.
> 
> If the Catalan language is not compatible with computers, that isn't
> computers' problem.

I will make sure the BoD of The Document Foundation and the MC is aware of this totally unacceptable comment.
Comment 5 jmontane 2013-09-12 10:44:35 UTC
Currently LibreOffice has a UI string wich only can have alphanum characters. I know that's enough for English and other 'big' and 'known' languages, but IMHO such requirement is a poor i18n design. 

See, for instance, UAX #29 Unicode text segmentation algorithm and its word boundaries section. Defining "what is a word" can be something really difficult.

http://www.unicode.org/reports/tr29/#Word_Boundaries
Comment 6 Michael Meeks 2013-09-12 10:55:05 UTC
Hi guys,

I think we need to relax a bit; this comment:

> If the Catalan language is not compatible with computers,
> that isn't computers' problem.

Is so ridiculously laughable - it has to be a joke - right ? :-) The LibreOffice project is committed to being the most awesome tool of choice for every language & locale, everywhere - including for Catalan (of course).

Also - Urmas frequently files some great locale specific bugs vs. his (non-English) language many of which have even been fixed I think :-) so ... lets not get over-excited here.

Urmas - it would be better to label ironic, or humerous comments as/when you make them in some way that significantly reduces your chances of being mis-understood :-)

At least, that's my take. Oh - and patches to fix this - are most welcome.

Thanks !
Comment 7 Eduardo Martínez 2013-09-12 11:51:01 UTC
I suppose that correct this bug is so easy as change the actual "iXlusctració" by an internationally accepted unicoded formated text "il·lustració". Usually I change it at <Tools><Options><LibreOffice Writer><Automatic Legend><Image>, but each new version or subversion restore the original profile.

Thanks
Comment 8 Caolán McNamara 2013-09-12 13:24:53 UTC
We support midletters (just fire these things through icu) in the normal case for word counting and word boundaries and so on, its for the splitting up strings for tokens for the formula stuff that we have this problem of splitting at the midletter
Comment 9 Commit Notification 2013-09-12 13:36:17 UTC
Caolan McNamara committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=b6807fd38373c98adc276697c24dcfcdf9471ac0

Resolves: fdo#61754 allow midletters in field name tokens



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 10 Caolán McNamara 2013-09-12 13:40:42 UTC
to test: load the .odt, select the text Il·lustració, ctrl+c, right click first image, caption, paste text into the category box, ok, now works.