Resolves: fdo#61754 allow midletters in field name tokens

Change-Id: I77cea3c1d2210435109ca0b6f762b6aea478e91b